[package]
name = "shellcode_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = { version = "0.4.1", features = ["func-types", "impl-default"] }
libaes = { version = "0.7" }
winapi = { version = "0.3.9", features = ["wincon", "psapi"] }
clap = { version = "4.5", features = ["derive"] }
